# fosho

./: .gitignore  demo_manifest.json  manifest.json  pyproject.toml  readme.md
data/: a.csv  a_broken.csv  a_modified.csv
examples/: cli_example.md  downstream_script.py
examples/data/: complex_metrics.csv  nested_json.csv  static_notes.csv
examples/data_and_schemas/: vitals_multiindex.csv
examples/eg1/: manifest.json
examples/eg1/data_and_schemas/schemas/: static_notes_schema.py
examples/eg2/: manifest.json
examples/eg2/schemas/: text_example_schema.py
examples/eg3/: downstream_script_3.py  generate_dataset_example.py  generate_schema_example.py  manifest.json
examples/eg3/data/: mock_hh_rlhf_dataset.py  test.json  train.json
examples/eg3/schemas/: Anthropic_hh-rlhf_dataset_schema.py  hh_rlhf_dataset_schema.py  squad_dataset_schema.py
schemas/: Anthropic_hh_rlhf_dataset_schema.py  a_broken_schema.py  a_modified_schema.py  a_schema.py  a_schema.yaml  complex_metrics_schema.py  nested_json_schema.py  squad_test_dataset_schema.py  static_notes_schema.py  test_data_schema.py  test_schema.py  text_example_schema.py  vitals_multiindex_schema.py
src/fosho/: __init__.py  cli.py  dataset_schema.py  dataset_utils.py  dataset_wrapper.py  manifest.py  reader.py  scaffold.py
tests/: test_cli_flow.py
tests_e2e/: test_failure_path.py  test_happy_path.py
